--- a/安卓开发/安卓开发日记.md
+++ b/安卓开发/安卓开发日记.md
@@ -4435,9 +4435,7 @@ performTraversals的工作流程
 
   MeasureSpec，测量规格，测量说明，从名字上看起来都知道它的作用就是决定View的测量过程或者说它在很大程度上决定了View的尺寸规格。除此之外还有父容器也会影响View的创建过程。在测量过程中，系统会将View的LayoutParams根据父容器的规则转换成对应的MeasureSpex，然后再根据这个MeasureSpec来测量View的宽高。
 
-  MeasureSpec代表了一个32位的int的值，高2位代表了SpecMode，低30位代表了SpecSize。SpecMode指测量模式，SpecSize是指在某种测量模式下的规格大小。MeasureSpec 通过将 SpecMode 和 SpecSize 打包成一个 int 值来避免过多的内存分配，为了方便操作，其提供了打包和解包方法源码如下:
-
-
+  MeasureSpec代表了一个32位的int的值，高2位代表了SpecMode，低30位代表了SpecSize。SpecMode指测量模式，SpecSize是指在某种测量模式下的规格大小。MeasureSpec 通过将 SpecMode 和 SpecSize 打包成一个 int 值来**避免过多的内存分配**，为了方便操作，其提供了打包和解包方法源码如下:
 
 ```cpp
 //将 SpecMode 和 SpecSize 打包，获取 MeasureSpec  
@@ -4460,17 +4458,15 @@ public static int getMode(int measureSpec) {
 
 SpecMode 有三类，每一类都表示特殊的含义：
 
-1. UNSPECIFIED 父容器不对 View 有任何的限制，要多大给多大，这种情况下一般用于系统内部，表示一种测量的状态。
-2. EXACTLY 父容器已经检测出 View 所需要的精确大小，这个时候 View 的最终大小就是 SpecSize 所指定的值，它对应于LayoutParams 中的 match_parent 和具体的数值这两种模式。
-3. AT_MOST 父容器指定了一个可用大小即 SpecSize，View 的大小不能大于这个值，具体是什么值要看不同 View 的具体实现。它对应于 LayoutParams 中的 wrap_content。
+1. **UNSPECIFIED 父容器不对 View 有任何的限制**，要多大给多大，这种情况下一般用于系统内部，表示一种测量的状态。
+2. **EXACTLY 父容器已经检测出 View 所需要的精确大小**，这个时候 View 的最终大小就是 SpecSize 所指定的值，它对应于LayoutParams 中的 match_parent 和具体的数值这两种模式。
+3. **AT_MOST 父容器指定了一个可用大小即 SpecSize**，View 的大小不能大于这个值，具体是什么值要看不同 View 的具体实现。它对应于 LayoutParams 中的 wrap_content。
 
 ##### [3] 理解MeasureSpec 和 LayoutParams 的对应关系
 
   对于DecorView，它的 MeasureSpec 由窗口的尺寸和其自身的 LayoutParams 来决定；对于普通 View，它的MeasureSpec 由父容器的 MeasureSpec 和自身的 LayoutParams 来共同决定，MeasureSpec一旦确定，onMeasure中就可以确定View的宽高。
 
   对普通的 View 来说，View的 measure过程是由其ViewGroup传递而来的，这里先看一下 ViewGroup 的 measureChildWithMargins 方法：
-
-
 
 ```java
  * @param child 要被测量的 View
@@ -4507,8 +4503,6 @@ protected void measureChildWithMargins(View child,
 ```
 
   上述方法会对子元素进行measure，在调用子元素的measure方法之前就会先通过getChildMeasureSpec方法来得到子元素的MeasureSpec。从代码上来看，子 view 的 MeasureSpec 的创建与父容器的 MeasureSpec 、子 view 本身的 LayoutParams 有关，此外还与 view 本身的 margin 和 padding 值有关，具体看一下ViewGroup的 getChildMeasureSpec 方法：
-
-
 
 ```cpp
     /*
@@ -6592,3 +6586,9 @@ public class ChooseAreaFragment extends Fragment {
 # 安卓开发之路第十七天（9.2）
 
 #### 《14天学会安卓开发》
+
+# 安卓开发之路第十八天（9.3）
+
+#### 一、view的绘制流程
+
+#### 二、自定义view
