--- a/安卓开发/安卓开发日记.md
+++ b/安卓开发/安卓开发日记.md
@@ -6916,3 +6916,9 @@ public class ChooseAreaFragment extends Fragment {
 #### 一、view的绘制流程
 
 #### 二、自定义view
+
+# 安卓开发之路第十九天（9.4）
+
+# 安卓开发之路第二十天（9.5）
+
+# 安卓开发之路第二十一天（9.6）
