--- a/场景题.md
+++ b/场景题.md
@@ -108,3 +108,9 @@ X11 X12 X13
 参赛的为：X2、X6、X3、X7、X11，速度最快的2匹加上X1构成最快的3匹马。
 
 因此一共需要7次比赛。
+
+#### 140g盐,一天平,7g 、2g砝码各一个,如何只利用这些东西3次把盐分成50g和90g?
+
+（1）用7g+2g的砝码称出9g盐,140g-9g=131g
+   (2）用7g+2g砝码把131g盐分成两部分61g,70g (61+2+7=70）
+（3）用2g砝码和9g盐把61g盐分成50g和11g两部分（61-9-2=11,11+50=61）.11g+9g+70g=90g
