--- a/专业课/专业课.md
+++ b/专业课/专业课.md
@@ -961,9 +961,16 @@ SSL中两个重要的概念是SSL会话和SSL连接，规约如下：
 
 4. 客户端收到服务端响应后会做以下几件事:
 
-* 验证证书的合法性：验证证书的合法性，证书中包含的网站地址是否与正在访问的地址一致、证书是否过期等
+* 验证证书的合法性：**验证证书的合法性**，证书中包含的网站地址是否与正在访问的地址一致、证书是否过期等
 
 证书验证通过后，在浏览器的地址栏会加上一把小锁(如楼主使用的Chrome浏览器)
+
+>**如何验证证书的合法性？浏览器收到服务器返回的证书后, 会验证证书有效性. 验证步骤大概如下:**
+>
+>- 验证证书有效期(起止时间)
+>- 验证证书域名(与浏览器地址栏中域名是否匹配)
+>- 验证证书吊销状态(CRL+OCSP), [见本文后"吊销检查"章节].
+>- 验证证书颁发机构, 如果颁发机构是中间证书, 在验证中间证书的有效期/颁发机构/吊销状态. 一直验证到最后一层证书, 如果最后一层证书是在操作系统或浏览器内置, 那么就是可信的, 否则就是自签名. [见本文后"签发者"章节]
 
 * 生成随机密码：如果证书验证通过，或者用户接受了不受信任证书，然后浏览器会生成一串随机数，然后用证书中的公钥加密。
 * HASH握手信息：用最开始约定好的HASH方式，把握手消息取HASH值， 然后用 随机数加密 “握手消息+握手消息HASH值(签名)” 并一起发送给服务端，为了**保证数据完整性。**
