--- a/安卓开发/安卓开发日记.md
+++ b/安卓开发/安卓开发日记.md
@@ -5782,7 +5782,37 @@ public boolean dispatchTouchEvent(MotionEvent ev) {
 
 由于不同的进程拥有不同的数据空间，所以无论是应用内还是应用间，均无法通过共享内存来实现进程间通信。
 
+## 【Handler】
 
+Android系统都是由事件驱动的。而处理事件的核心就在于Handler。
+
+![image-20200910114710466](X:\Users\xu\AppData\Roaming\Typora\typora-user-images\image-20200910114710466.png)
+
+这就是整个Handler在Java层的流程示意图。可以看到，在Handler调用sendMessage方法以后，Message对象会被添加到MessageQueue中去。而这个MessageQueue就是被包裹在了Looper中。那么Looper对象是干什么的呢？它和Handler是什么关系呢？我们来看一下他们具体的职责把~
+
+
+
+- Handle 消息机制中作为一个对外暴露的工具，其内部包含了一个 Looper 。负责Message的发送及处理。Handler.sendMessage() ：向消息队列发送各种消息事件；Handler.handleMessage()：处理相应的消息事件
+
+  
+
+- Looper 作为消息循环的核心，其内部包含了一个消息队列 MessageQueue ，用于记录所有待处理的消息；通过Looper.loop()不断地从MessageQueue中抽取Message，按分发机制将消息分发给目标处理者，可以看成是消息泵。注意，线程切换就是在这一步完成的。
+
+  
+
+- MessageQueue 则作为一个消息队列，则包含了一系列链接在一起的 Message ；不要被这个Queue的名字给迷惑了，就以为它是一个队列，但其实内部通过单链表的数据结构来维护消息列表，等待Looper的抽取。
+
+  
+
+- Message 则是消息体，内部又包含了一个目标处理器 target ，这个 target 正是最终处理它的 Handler
+
+
+
+哦？原来他们的职责是这样啊，可我还是不懂他们到底是怎么运行起来的。就像你告诉我医生是负责治病，警察是抓坏人的，他们具体是如何去做的呢？
+
+## 【[Git以及相关事物的理解](https://segmentfault.com/a/1190000023000191)】
+
+版本控制是一种记录一个或若干文件内容变化，以便将来查阅特定版本修订情况的系统。
 
 # 安卓开发之路第一天（8.16）
 
