--- a/专业课/专业课.md
+++ b/专业课/专业课.md
@@ -1024,6 +1024,14 @@ SSL中两个重要的概念是SSL会话和SSL连接，规约如下：
 
 ##### [13] 如何验证证书合法性
 
+>* 数字证书是依赖根证书的信任传递机制的，所以验证一张数字证书的合法性，需要其上级证书参与进来进行验证。
+>
+>* 除了根证书，每一张数字证书都包含了其上级证书对其的签名，也就是用上级证书的私钥对证书摘要（简记为H1）进行加密。
+>
+>* 因此验证数字证书合法性的方法总结为：验证根证书是否为受信任的根证书，及其下面证书链上每一张数字证书解密后的证书摘要（H2）是否与证书内容计算得出的摘要（H1）一致。
+>
+>数字证书解密后的证书摘要（H2）是使用上级证书的公钥来进行解密的。
+
 **可信性验证/合法性验证**：当你要验证这个数字证书可信/合法性时，你需要找到你的上一层CA认证中心的数字证书，并且从中**获取公钥**，把数据证书中的密文**F'**进行RSA解密，如果得出的值h2和h1比较（h1可以立即用数据证书中的F现场算出来），如果相等，则认为证书是可信的，合法的。
 
 **完整性验证**：在验证可信性的过程中，h1和h2的比较，其实已经顺便验证其完整性了。
