--- a/专业课/专业课.md
+++ b/专业课/专业课.md
@@ -1247,6 +1247,8 @@ https://blog.csdn.net/historyasamirror/article/details/5778378
 > **线程**
 >
 > 一个进程之内可以分为一到多个线程。一个线程就是一个指令流，将指令流中的一条条指令以一定的顺序交给 CPU 执行Java 中，**线程作为最小调度单位，进程作为资源分配的最小单位**。 在 windows 中进程是不活动的，只是作为线程的容器。
+>
+> **计算机资源**：CPU资源，CPU的能力是有限的，占用他的那么他将无心做其他事。
 
 1. **操作系统中的一个“执行中的程序”就是进程，它是操作系统资源分配的最小的单位。而线程是进程的一个子集它是CPU调度和执行的最小单位**。
 2. **线程相对进程更轻量，特别是上下文切换，进程要比线程消耗更多的计算机资源。**
@@ -1274,10 +1276,10 @@ https://blog.csdn.net/historyasamirror/article/details/5778378
 - 一个线程内的多个**协程**虽然可以切换，但是多个**协程**是串行执行的，只能在一个线程内运行，没法利用CPU多核能力。
 - **协程**与进程一样，切换是存在上下文切换问题的。
 
-**上下文切换**
+#### 5. 上下文切换
 
-- 进程的切换者是操作系统，切换时机是根据操作系统自己的切换策略，用户是无感知的。进程的切换内容包括页全局目录、内核栈、硬件上下文，切换内容保存在内存中。进程切换过程是由“用户态到内核态到用户态”的方式，切换效率低。
-- 线程的切换者是操作系统，切换时机是根据操作系统自己的切换策略，用户无感知。线程的切换内容包括内核栈和硬件上下文。线程切换内容保存在内核栈中。线程切换过程是由“用户态到内核态到用户态”， 切换效率中等。
+- 进程的切换者是操作系统，切换时机是根据操作系统自己的切换策略，用户是无感知的。**进程的切换内容包括页全局目录、内核栈、硬件上下文，切换内容保存在内存中**。进程切换过程是由“用户态到内核态到用户态”的方式，切换效率低。
+- 线程的切换者是操作系统，切换时机是根据操作系统自己的切换策略，用户无感知。**线程的切换内容包括内核栈和硬件上下文。**线程切换内容保存在内核栈中。线程切换过程是由“用户态到内核态到用户态”， 切换效率中等。
 - **协程**的切换者是用户（编程者或应用程序），切换时机是用户自己的程序所决定的。**协程**的切换内容是硬件上下文，切换内存保存在用户自己的变量（用户栈或堆）中。**协程**的切换过程只有用户态，即没有陷入内核态，因此切换效率高。
 
  #### 4. 讲一下线程状态并且解释一下？
