--- a/安卓开发/安卓开发日记.md
+++ b/安卓开发/安卓开发日记.md
@@ -6455,7 +6455,8 @@ Handler 的持有的引用对象最好使用弱引用，资源释放时也可以
 ##### [2] OkHttpClient
 
 既然是流程分析，使用过okhttp的都了解，首先需要初始化一个OkHttpClient对象。OkHttp支持两种构造方式
- 1.默认方式
+
+1. 默认方式
 
 ```cpp
 public OkHttpClient() {
@@ -6477,7 +6478,7 @@ public OkHttpClient build() {
     }
 ```
 
-OkHttpClient基本上就这样分析完了，里面的细节基本上就是用于初始化参数和设置参数的方法。所以也必要将大量的代码放上来占内容。。。,这里另外提一点，**从OkHttpClient中可以看出什么设计模式哪**？
+OkHttpClient基本上就这样分析完了，里面的细节基本上就是用于初始化参数和设置参数的方法。所以也必要将大量的代码放上来占内容。这里另外提一点，**从OkHttpClient中可以看出什么设计模式哪**？
  1.builder模式
  2.外观模式
 
@@ -6495,7 +6496,7 @@ Request(Builder builder) {
   }
 ```
 
-这意味着什么，当然我们构建一个request需要用builder模式进行构建，那么就看一下builder的源码。
+这意味着什么，当然我们**构建一个request需要用builder模式**进行构建，那么就看一下builder的源码。
 
 ```kotlin
 public Builder newBuilder() {
@@ -6527,8 +6528,6 @@ public Request build() {
 **这里注意一下，这里分析区分一下同步请求和异步请求，但其实实质的执行流程除了异步外，基本都是一致的。**
  构建完Request后，我们就需要构建一个Call，一般都是这样的`Call call = mOkHttpClient.newCall(request);`那么我们就返回OkHttpClient的源码看看。
 
-
-
 ```kotlin
 /**
    * Prepares the {@code request} to be executed at some point in the future.
@@ -6541,15 +6540,11 @@ public Request build() {
 
 可以看到，这里实质上调用的是RealCall中的newRealCall方法，但是这里需要注意一点，那就是方法前面的`@Override`注解，看到这个注解我们就要意识到，这个方法不是继承就是实现接口。
 
-
-
 ```java
 public class OkHttpClient implements Cloneable, Call.Factory, WebSocket.Factory {...}
 ```
 
 可以看到OkhttpClient实现了Call.Factory接口。
-
-
 
 ```csharp
 //Call.java
@@ -6560,8 +6555,6 @@ interface Factory {
 
 从接口源码我们也可以看出，这个接口其实并不复杂，仅仅是定义一个newCall用于创建Call的方法，这里其实用到了**工厂模式**的思想，**将构建的细节交给具体实现，顶层只需要拿到Call对象即可。**
  回到主流程，我们继续看RealCall中的newRealCall方法。
-
-
 
 ```java
 final class RealCall implements Call {
@@ -6637,8 +6630,6 @@ private void captureCallStackTrace() {
  3.`eventListener.callStart(this);`可以看到前面构建的eventListener起到作用了，这里先回调callStart方法。
  4.`client.dispatcher().enqueue(new AsyncCall(responseCallback));`这里我们就需要先回到OkHttpClient的源码中。
 
-
-
 ```cpp
 public Dispatcher dispatcher() {
     return dispatcher;
@@ -6646,8 +6637,6 @@ public Dispatcher dispatcher() {
 ```
 
 可以看出返回了一个仅仅是返回了一个DisPatcher对象，那么就追到Dispatcher源码中。
-
-
 
 ```csharp
 synchronized void enqueue(AsyncCall call) {
@@ -6915,8 +6904,6 @@ public Response proceed(Request request, StreamAllocation streamAllocation, Http
 
 这样就很清晰了，这里index就是我们刚才的0，也就是从0开始，如果index超过了过滤器的个数抛出异常，后面会再new一个RealInterceptorChain，而且会将参数传递，并且**index+1**了，接着获取index的interceptor,并调用intercept方法，传入新new的next对象，这里可能就有点感觉了，这里用了**递归**的思想来完成遍历，为了验证我们的想法，随便找一个interceptor，看一下intercept方法。
 
-
-
 ```java
 public final class ConnectInterceptor implements Interceptor {
   public final OkHttpClient client;
@@ -6984,6 +6971,110 @@ okHttp流程
 链接：https://www.jianshu.com/p/37e26f4ea57b
 来源：简书
 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
+##### [6] okhttp原理-面试篇
+
+**1、okhttp工作的大致流程**
+
+**1.1、整体流程**
+
+（1）、当我们通过**OkhttpClient**创立一个**Call**，并发起**同步**或者**异步**请求时；
+（2）、okhttp会通过Dispatcher对我们所有的RealCall（Call的具体实现类）进行统一管理，并通过**execute()**及**enqueue()**方法对同步或者异步请求进行解决；
+（3）execute()及enqueue()这两个方法会最终调用RealCall中的getResponseWithInterceptorChain()方法，从**阻拦器链**中获取返回结果；
+（4）阻拦器链中，依次通过**RetryAndFollowUpInterceptor**（重定向阻拦器）、**BridgeInterceptor**（桥接阻拦器）、**CacheInterceptor**（缓存阻拦器）、**ConnectInterceptor**（连接阻拦器）、**CallServerInterceptor**（网络阻拦器）对请求依次解决，与服务的建立连接后，获取返回数据，再经过上述阻拦器依次解决后，最后将结果返回给调用方。
+提供两张图便于了解和记忆：
+
+okhttp整体流程1：
+![img](https://imgconvert.csdnimg.cn/aHR0cHM6Ly9pbWcuc29uZ21hLmNvbS93ZW56aGFuZy8yMDE4MTIxNi9vd3Vjbm92YnZmaDEzMS5wbmc?x-oss-process=image/format,png)
+
+okhttp整体流程2：
+
+​                       ![img](https://imgconvert.csdnimg.cn/aHR0cHM6Ly9pbWcuc29uZ21hLmNvbS93ZW56aGFuZy8yMDE4MTIxNi9zcnF6M2doMmUxdTEzMi5wbmc?x-oss-process=image/format,png)
+
+这张图只画出了请求流程，没有数据返回流程，后期会解决。
+
+**1.2、各大阻拦器的原了解析**
+
+**1.2.1、RetryAndFollowUpInterceptor：负责重定向**
+
+构建一个StreamAllocation对象，而后调用下一个阻拦器获取结果，从返回结果中获取重定向的request，假如重定向的request不为空的话，并且不超过重定向最大次数的话就进行重定向，否则返回结果。注意：这里是通过一个while（true）的循环完成下一轮的重定向请求。
+
+（1）、StreamAllocation为什么在第一个阻拦器中就进行创立？
+  便于取消请求以及出错释放资源。
+
+（2）、StreamAllocation的作用是什么？
+    StreamAllocation负责统筹管理Connection、Stream、Call三个实体类，具体就是为一个Call（Realcall），寻觅（ findConnection() ）一个Connection（RealConnection），获取一个Stream（HttpCode）。
+
+**1.2.2、BridgeInterceptor**
+
+负责将原始Requset转换给发送给服务端的Request以及将Response转化成对调用方友好的Response，具体就是对request增加Content-Type、Content-Length、Connection、Accept-Encoding等请求头以及对返回结果进行解压等。
+
+**1.2.3、CacheInterceptor**
+
+CacheInterceptor：负责读取缓存以及升级缓存。
+在请求阶段：
+
+1. 读取候选缓存cacheCandidate；
+2. 根据originOequest和cacheresponse创立缓存策略CacheStrategy；
+3. 根据缓存策略，来决定能否使用网络或者者使用缓存或者者返回错误。
+   具体的的缓存策略就是http的缓存策略，详见下图：
+   在结果返回阶段：
+   负责将网络结果进行缓存（使用于DiskLruCache）。
+
+okhttp&http缓存策略：
+
+![img](https://imgconvert.csdnimg.cn/aHR0cHM6Ly9pbWcuc29uZ21hLmNvbS93ZW56aGFuZy8yMDE4MTIxNi9xdGdocHZqMjRscTEzMy5wbmc?x-oss-process=image/format,png)
+
+强制缓存：当用户端第一次请求数据是，服务端返回了缓存的过期时间（Expires与Cache-Control），没有过期即可以继续使用缓存，否则则不适用，无需再向服务端讯问。
+比照缓存：当用户端第一次请求数据时，服务端会将缓存标识（Etag/If-None-Match与Last-Modified/If-Modified-Since）与数据一起返回给用户端，用户端将两者都备份到缓存中 ，再次请求数据时，用户端将上次备份的缓存
+标识发送给服务端，服务端根据缓存标识进行判断，假如返回304，则表示缓存可用，假如返回200，标识缓存不可用，使用最新返回的数据。
+
+ETag是用资源标识码标识资源能否被修改，Last-Modified是用时间戳标识资源能否被修改。ETag优先级高于Last-Modified。
+
+**1.2.4、ConnectInterceptor：负责与服务器建立连接**
+
+使用StreamAllocation.newStream来和服务端建立连接，并返回输入输出流（HttpCodec），实际上是通过StreamAllocation中的findConnection寻觅一个可用的Connection，而后调用Connection的connect方法，使用socket与服务端建立连接。
+
+**1.2.5、CallServerInterceptor：负责从服务器读取响应的数据**
+
+主要的工作就是把请求的Request写入到服务端，而后从服务端读取Response。
+（1）、写入请求头
+（2）、写入请求体
+（3）、读取响应头
+（4）、读取响应体
+
+**2、连接池原理**
+
+因为HTTP是基于TCP，TCP连接时需要经过三次握手，为了加快网络访问速度，我们可以Reuqst的header中将Connection设置为keepalive来复用连接。
+
+Okhttp支持5个并发KeepAlive，默认链路生命为5分钟(链路空闲后，保持存活的时间)，连接池有ConectionPool实现，对连接进行回收和管理。
+
+**2.1、连接池的清除**
+
+连接池清除1：
+
+![img](https://imgconvert.csdnimg.cn/aHR0cHM6Ly9pbWcuc29uZ21hLmNvbS93ZW56aGFuZy8yMDE4MTIxNi9rZTNnZWVxM2lyMDEzNC5wbmc?x-oss-process=image/format,png)
+
+在ConectionPool中有一个异步线程去清除连接池中的连接，首先通过cleanup方法执行清除，而后等待clean返回的时间后，再次进行清除，以此循环，持续清除。
+
+连接池原理2：
+
+![img](https://imgconvert.csdnimg.cn/aHR0cHM6Ly9pbWcuc29uZ21hLmNvbS93ZW56aGFuZy8yMDE4MTIxNi94Z212NG5uMDFuejEzNS5wbmc?x-oss-process=image/format,png)
+
+1、首先统计空闲连接数量；
+2、而后通过for循环查找最长空闲时间的连接以及对应空闲时长；
+3、而后判断这个最长空闲时间的连接能否超出最大空闲连接数或者者或者者超过最大空闲时间，满足其一则清理最长空闲的连接。假如不满足清除条件，则返回一个对应等待时间。
+这个对应等待的时间又分二种情况：
+1 有空闲连接：则返回：keepAliveDurationNs-longestIdleDurationNs;
+2 没有空闲的连接，则返回：keepAliveDurationNs
+注意：清理一个空闲连接后，会返回0，再次立即开始清除。
+
+如何统计空闲连接呢？
+
+统计空闲连接:
+![img](https://imgconvert.csdnimg.cn/aHR0cHM6Ly9pbWcuc29uZ21hLmNvbS93ZW56aGFuZy8yMDE4MTIxNi9qdGhibnV0aHJxaDEzNi5wbmc?x-oss-process=image/format,png)
+
+StreamAllocation创立一个Connection后会将自己增加到Connection的connection.allocations列表中，数据读取完毕之后，会将自己从Connection的connection.allocations中移除，所以判读一个Connection能否是空闲连接可以采用引用计数法，判断connection.allocations列表中能否有StreamAllocation，假如没有就是空闲连接，否则不是。
 
 # 安卓开发之路第一天（8.16）
 
