--- a/面试.md
+++ b/面试.md
@@ -498,9 +498,19 @@ private static  ListNode helper(ListNode head){
 
 #### 2020.9.11 海康威视
 
-#### **2020.9.12 百度**
+#### **2020.9.12 百度（一面到三面）**
 
+#### **2020.9.15 哔哩哔哩**
 
+#### **2020.9.15 中科创达**
+
+#### **2020.9.17 跟谁学**
+
+#### **2020.9.17 青岛鼎信**
+
+#### **2020.9.18 网易**
+
+#### **2020.9.18 华为**
 
 # 面试经验
 
