--- a/面试.md
+++ b/面试.md
@@ -488,7 +488,7 @@ private static  ListNode helper(ListNode head){
 
 #### **2020.9.6 VIPKID**
 
-#### **2020.9.8 小米**实习
+#### **2020.9.8 小米**（实习岗）
 
 #### **2020.9.8 美团**
 
